Fix align of filterBox

--- a/src/styles/components/Filters.pcss
+++ b/src/styles/components/Filters.pcss
@@ -102,6 +102,14 @@
           text-align: center;
         }
       }
+
+      & .filterBox:first-child {
+        padding-left: 0;
+      }
+
+      & .filterBox:last-child {
+        padding-right: 0;
+      }
     }
 
     & input[type="radio"] {
